--- a/agent.css
+++ b/agent.css
@@ -29,10 +29,11 @@
 
 .flickity-button {
     display: none;
-    }
+}
 
 body{
     margin: 0;
+    padding: 0;
     overflow: hidden;
     background-color: black;
 }
@@ -46,18 +47,18 @@ body{
     user-select: none;
     text-align: center;
 
+    position: absolute;
+    
+    left: -1vw;
+    width: 100vw;
+    height: 100vh;
+    line-height: 115vh;
+    vertical-align: center;
+
+    font-size: var(--desiredfontsize);
+    top: calc(var(--desiredfontsize) * -0.7);
+
     cursor:grab;
-}
-
-#jett .agentname {
-    font-size: 100vh;
-    transform: translate(0%, -60%);
-}
-
-#phoenix .agentname {
-    font-size: 60vh;
-    top: 100%;
-    transform: translate(0%, 90%);
 }
 
 .agent_fullname{
@@ -71,6 +72,61 @@ body{
     top: 33%;
     left: 2%;
     width: 400px;
+
+    cursor: default;
+}
+
+
+.role_navbar {
+    display: flex;
+    font-family: 'Texgyre-bi';
+    
+    position: absolute;
+    top: 3%;
+    width: 100%;
+
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.other_role {
+    width: 40px;
+    height: 40px;
+    opacity: 0.7;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.curr_role {
+   width: 50px;
+   height: 50px;
+   opacity: 1;
+   cursor: default;
+   z-index: 10;
+}
+
+.other_role:hover{
+    width: 45px;
+    height: 45px;
+    opacity: 0.95;
+}
+
+.gamelogo {
+    position: absolute;
+    top: 28px;
+    left: 30px;
+    width: 50px;
+    height: 50px;
+    opacity: 0.7;
+}
+
+.transitionscreen {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgb(0,180,65);
+    background: radial-gradient(circle, rgba(0,180,65,1) 0%, rgba(39,75,53,1) 100%); 
+    z-index: 99;
 }
 
 .agentdescription{
@@ -84,6 +140,7 @@ body{
     top: 40%;
     left: 2%;
     width: 400px;
+    cursor: default;
 }
 
 .agentimg{
@@ -91,26 +148,37 @@ body{
     margin: auto;
     text-align:center;
     pointer-events: none;
-    align-self: end;
 }
 
 #jett .agentimg{
     width: auto;
     height: 82%;
-    left:50%;
-    transform: translate(-60%, 0%);
+    left:53%;
+    bottom: 0;   
 }
 
 #phoenix .agentimg{
     width: auto;
-    height: 120%;
-    left:40%;
+    height: 130%;
+    left:35%;
     top: 10%;
-    transform: translate(-50%, 0%);
+}
+
+#raze .agentimg{
+    width: auto;
+    height: 120%;
+    left:50%;
+    top: 15%;
+}
+
+#reyna .agentimg{
+    width: auto;
+    height: 120%;
+    left:37%;
+    top: 9%;
 }
 
 .agentscreen{
-    display: grid;
     position: relative;
     width: 100vw;
     height: 100vh;
@@ -126,6 +194,30 @@ body{
     background: radial-gradient(circle, rgba(234,113,52,1) 0%, rgba(189,67,30,1) 100%);
 }
 
+#raze {
+    background: rgb(254,197,77);
+    background: radial-gradient(circle, rgba(254,197,77,1) 0%, rgba(132,89,75,1) 100%);
+}
+
+#reyna {
+    background: rgb(254,102,240);
+    background: radial-gradient(circle, rgba(254,102,240,1) 0%, rgba(152,53,134,1) 100%); 
+}
+
+#yoru {
+    background: rgb(74,96,182);
+    background: radial-gradient(circle, rgba(74,96,182,1) 0%, rgba(57,56,109,1) 100%); 
+}
+
+#neon {
+    background: rgb(154,222,255);
+    background: radial-gradient(circle, rgba(154,222,255,1) 0%, rgba(86,88,255,1) 100%); 
+}
+
+#iso {
+    background: rgb(177,129,255);
+    background: radial-gradient(circle, rgba(177,129,255,1) 0%, rgba(109,51,180,1) 100%); 
+}
 
 .agentselect{
     position: absolute;
@@ -144,11 +236,11 @@ body{
 .agentselect img{
     height:20%;
     width: auto;
-    opacity: 0.5;
+    opacity: 0.7;
     user-select: none;
     cursor: pointer;
 }
 
 .agentselect img:hover{
-    opacity: 0.65;
+    opacity: 0.9;
 }
