--- a/agent.css
+++ b/agent.css
@@ -172,17 +172,27 @@ body{
     width: 400px;
     cursor: default;
 }
+/*
+.agentimgcontainer {
+    border: 5px solid red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}*/
 
 .agentimg{
-    position: absolute;
+    
     margin: auto;
     text-align:center;
     pointer-events: none;
 
     width: auto;
-
+    border: 2px solid black;
     height: var(--size);
+    position: absolute;
     left: var(--leftoffset);
+    transform: translate(var(--leftoffset) * -1, var(--bottomoffset) * -1);
     bottom: var(--bottomoffset);
 }
 
