--- a/agent.css
+++ b/agent.css
@@ -34,7 +34,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: black;
     overflow: hidden;
 }
 
@@ -122,17 +122,6 @@ body{
     z-index: 80;
 }
 
-.main_screen {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    margin-top: calc(var(--pageorder) * -100vh);
-    z-index: 90;
-    
-    /*animation-name: animate;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-out;*/
-}
-
 #selectionscreen{
     display: grid;
     grid-template: 1fr/ 1fr;
@@ -172,14 +161,6 @@ body{
     width: 400px;
     cursor: default;
 }
-/*
-.agentimgcontainer {
-    border: 5px solid red;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-}*/
 
 .agentimg{
     position: absolute;
