--- a/agent.css
+++ b/agent.css
@@ -56,10 +56,12 @@ body{
     vertical-align: center;
 
     font-size: var(--desiredfontsize);
-    top: calc(var(--desiredfontsize) * -0.7);
+    bottom: calc(var(--desiredfontsize) * -0.65);
 
     cursor:grab;
 }
+
+
 
 .agent_fullname{
     font-family: 'Texgyre-bi';
@@ -71,7 +73,7 @@ body{
     position: absolute;
     top: 33%;
     left: 2%;
-    width: 50%;
+    width: 100%;
 
     cursor: default;
 }
@@ -158,7 +160,8 @@ body{
     position: absolute;
     top: 40%;
     left: 2%;
-    width: 400px;
+    max-width: 400px;
+    width: 30%;
     cursor: default;
 }
 
@@ -167,10 +170,16 @@ body{
     pointer-events: none;
     width: auto;
     height: var(--size);
-    left: var(--leftoffset);
-    right: 0;
-    margin: auto;
     bottom: var(--bottomoffset);
+}
+
+.agentimgcont{
+    width: 100%;
+    height: 100%;
+    display:flex;
+    position: absolute;
+    left: var(--leftoffset);
+    justify-content: center;
 }
 
 .agentscreen{
@@ -182,10 +191,12 @@ body{
 
 .agentselect{
     position: absolute;
-    right: 2.5%;
+    right: 40px;
+
     top: 10%;
 
-    width: 12%;
+    width: auto;
+
     height: 75vh;
 
     display: flex;
@@ -200,9 +211,41 @@ body{
     opacity: 0.7;
     user-select: none;
     cursor: pointer;
+
 }
 
 .agentselect img:hover{
     opacity: 0.9;
 }
 
+@media only screen and (max-width: 900px) and (orientation: portrait){
+    .agentname{
+        font-size: 15vh;
+        opacity: 0.9;
+        width: auto;
+        height: auto;
+        bottom: 0;
+        z-index: 96;
+        left: 10px;
+        vertical-align: bottom;
+        line-height: 0;
+    }
+    .agent_fullname{
+        width: 100%;
+        text-align: center;
+        left: 0;
+        top: 9vh;
+    }
+    .agentdescription{
+        top: 15vh;
+        
+        text-align: center;
+        position: absolute;
+        width: 95%;
+        font-size: 1.75vh;
+        max-width: 99%;
+    }
+    .agentselect{
+        display: none;
+    }
+}
